# makelife-firmware

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  platformio.ini
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.c
boards/: nucleo-f446re.cmake  pico.cmake
cmake/: toolchain-arm-none-eabi.cmake
hal/: CMakeLists.txt
hal/include/hal/: gpio.h  i2c.h  system.h
legacy/: platformio.ini
legacy/src/: main.cpp
legacy/test/: test_main.cpp
qemu/: install-qemu.sh  parse_unity.py  run.sh
qemu/targets/: arm_linux.sh  esp32.sh  rp2040.sh  stm32.sh  x86.sh
targets/cosim/: CMakeLists.txt  hal_gpio_cosim.c  hal_i2c_cosim.c
targets/esp32/: CMakeLists.txt  hal_gpio.c  hal_system.c
targets/native/: hal_gpio.c  hal_system.c  native_test_helpers.h
targets/rp2040/: CMakeLists.txt  hal_gpio.c  hal_system.c
targets/stm32/: CMakeLists.txt  hal_gpio.c  hal_system.c
targets/x86/: CMakeLists.txt  hal_gpio.c  hal_system.c
tests/: CMakeLists.txt  test_gpio.c  test_system.c
