cmake_minimum_required(VERSION 3.25)
project(makelife-firmware C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
if(NOT DEFINED TARGET_ARCH)
    message(FATAL_ERROR "TARGET_ARCH not defined. Use a CMake preset: cmake --preset native")
endif()
message(STATUS "Building for target: ${TARGET_ARCH}")
add_subdirectory(hal)
add_subdirectory(targets/${TARGET_ARCH})
add_subdirectory(lib/unity)
add_subdirectory(app)
if(TARGET_ARCH STREQUAL "native")
    enable_testing()
    add_subdirectory(tests)
endif()
